# hw_api

./: .env  .gitignore  Dockerfile  alembic.ini  config_reader.py  crypto.py  db.sqlite3  docker-compose.yml  main.py  mainloc.py  pyproject.toml  schedule.py  test.py
alembic/: env.py
alembic/versions/: 12288941c6c2_mutable_list.py  2f24b8f9de4c_initial.py  43670e750c90_class_name_primary_key.py  4fd9f62b923d_remove_uid.py  5ac149eb236d_mutable_json.py  74a75b92cb7f_register.py  917d465125bb_classes_table.py  ad90849bf68d_uid.py  d8d071b478bb_start.py  f56dd94e7ca8_create_users.py  f8ce75fec6f0_описаниеdel_register.py
api/users/: crud.py  schemas.py  views.py
api_v1/: __init__.py
api_v1/classes/: crud.py  schedule.py  schemas.py  views.py
api_v1/marks/: parsing.py  views.py
api_v1/register/: crud.py  schemas.py  send_message.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
app/api/: __init__.py
app/api/users/: schemas.py  user.py  views.py
app/database/: config.py
app/database/models/: __init__.py  db_helper.py  user.py
bot/: middleware.py
bot/handlers/: __init__.py  common.py
core/: config.py
core/models/: __init__.py  base.py  classes.py  db_helper.py  register.py  user.py
