[project]
name = "databaseapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "cryptography>=45.0.4",
    "fastapi>=0.115.12",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
