[project]
name = "hwapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "black>=25.1.0",
    "cryptography>=45.0.5",
    "fastapi>=0.116.1",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standart]>=0.35.0",
]
